# synodl

./: Makefile.in  README.md  config.h.in  configure  configure.ac
extra/: fake_syno.py
src/: Makefile.am  Makefile.in  cfg.c  cfg.h  http.c  http.h  syno.c  syno.h  synodl.c  task.h  ui.c  ui.h
